# roverbar-svn

tags/0.1/portage_overlay/x11-misc/matchbox-keyboard/: Manifest
tags/0.2/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.in
tags/0.2/doc/: roverbar-hacking.man  roverbar-maintenance.man
tags/0.2/portage_overlay/x11-misc/matchbox-keyboard/: matchbox-keyboard-0.1-r19.ebuild
tags/0.2/portage_overlay/x11-misc/matchbox-keyboard/files/: matchbox-keyboard-0.1-roverbarcolors.patch
tags/0.2/src/: make_exportfs.sh
trunk/: Makefile.am  README
trunk/portage_overlay/media-sound/roverbar-mp3station/: Manifest  roverbar-mp3station-0.2.ebuild
trunk/portage_overlay/media-sound/roverbar-mp3station/files/: digest-roverbar-mp3station-0.2
trunk/portage_overlay/x11-misc/matchbox-keyboard/: Manifest
trunk/portage_overlay/x11-misc/matchbox-keyboard/files/: matchbox-keyboard-0.1-roverbarcolors.patch
trunk/src/: do_stats.sh
